--- a/Rebulid/index.html
+++ b/Rebulid/index.html
@@ -2,11 +2,8 @@
 <html>
 <head>
     <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Page Title</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <script src='main.js'></script>
+    <link rel='stylesheet' type='text/css' href='main.css'>
 </head>
 <body>
     <div class="body">
@@ -15,11 +12,11 @@
             Kopf
         </div>
         <div class="menu">
-        Menü:<a href="index.html">Link</a>
+        Menü:<a href="index.html">Link</a> | <a href="https://chris-industries.de">Website</a>
         </div>
-        <div class="mid">
+        <div class="content">
             Mitte Mitte Mitte Mitte  MitteMitteMitte MitteMitteMitteMitte MitteMitteMitte Mitte Mitte Mitte Mitte  MitteMitteMitte MitteMitteMitteMitte MitteMitteMitte
-            Mitte Mitte Mitte Mitte  MitteMitteMitte MitteMitteMitteMitte MitteMitteMitte
+            Mitte Mitte Mitte Mitte  MitteMitteMitte MitteMitteMitteMitte MitteMitteMitte Mitte
 
 
         </div>
