--- a/Rebulid/Exercise Nr 1/index.html
+++ b/Rebulid/Exercise Nr 1/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <head>
     <meta charset='utf-8'>
-    <title>Page Title</title>
+    <title>Index</title>
     <link rel='stylesheet' type='text/css' href='main.css'>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <div class="body">
