--- a/Rebulid/Exercise Nr 1/pages/stages.html
+++ b/Rebulid/Exercise Nr 1/pages/stages.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <head>
     <meta charset='utf-8'>
-    <title>Page Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Vorstellungen</title>
     <link rel='stylesheet' type='text/css' href='../main.css'>
 </head>
 <body>
