--- a/Rebulid/Exercise Nr 2/index.html
+++ b/Rebulid/Exercise Nr 2/index.html
@@ -1,11 +1,37 @@
 <!DOCTYPE html>
-<html>
 <head>
     <meta charset='utf-8'>
     <title>Page Title</title>
     <link rel='stylesheet' type='text/css' href='main.css'>
 </head>
 <body>
-    
+    <p>
+    <div class="body">
+        <div class="head">
+            kopf
+        </div>
+            <div class="columnleft">
+                splate link
+                <div class="picture">
+                    test
+                </div>
+                <div class="menu">
+                    Menü:
+                </div>
+            </div>
+
+            <div class="content">
+                content
+            </div>
+
+            <div class="columnright">
+                right
+            </div>    
+            
+    </div>
+    <div class="foot">
+        foot
+    </div>
+    </p>
 </body>
 </html>
