--- a/Rebulid/Exercise Nr 1/index.html
+++ b/Rebulid/Exercise Nr 1/index.html
@@ -10,6 +10,9 @@
         <p>
         <div class="head">
             <center><img width="100%" height="130px" src="picture/pexels-donald-tong-109669.jpg" /></center>
+            <div class="printhead">
+                <center><h1>Theater</h1></center>
+            </div>
         </div>
         <div class="menu">
         Menü: <a href="index.html">Home</a> | <a href="pages/stages.html">Vorstellungen</a> | <a href="pages/impressum.html">Impressum</a>
