--- a/Rebulid/Exercise Nr 1/pages/impressum.html
+++ b/Rebulid/Exercise Nr 1/pages/impressum.html
@@ -9,7 +9,7 @@
     <div class="body">
         <p>
         <div class="head">
-            <center><img width="100%" height="130px" src="../picture/pexels-donald-tong-109669.jpg" /></center>
+            <center><img width="100%" height="125px" src="../../../Rebulid/Exercise Nr 2/picture/pexels-donald-tong-109669.jpg" /></center>
             <div class="printhead">
                 <center><h1>Theater</h1></center>
             </div>
